[package]
name = "sui_contibutors"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = {version = "1.48.0", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.25", features = ["json"] }
urlencoding = "2.1"
dotenv = "0.15"
tower-http = {version = "0.6.8", features=["full"]}
